Archive2/28/bddaf7eea533fb/output
main.cpp:1:1: error: expected unqualified-id
-- Srm632Div2Lev2 PotentialGeometricSequence
^
1 error generated.
